[gd_scene load_steps=22 format=4 uid="uid://bvrsppd7g3fb6"]

[ext_resource type="Script" uid="uid://dm6bfw2f5sy3q" path="res://levels/level_proc_gen.gd" id="1_644ap"]
[ext_resource type="Shader" uid="uid://brewfs1kwesjx" path="res://shaders/bounding-battle-background.gdshader" id="2_lheys"]
[ext_resource type="Texture2D" uid="uid://csb8xbre51kmt" path="res://levels/sprites/backgrounds/bg2-grey.png" id="3_t1xex"]
[ext_resource type="PackedScene" uid="uid://dg5ctg5tdlylq" path="res://levels/tilemaps/tile_map_layer.tscn" id="4_t1xex"]
[ext_resource type="Texture2D" uid="uid://gqe58e68mcfg" path="res://sprites/tilemaps/tiles_util.png" id="5_mfpar"]
[ext_resource type="Script" uid="uid://7qk3dlb12dc2" path="res://levels/level_tilemap_setup.gd" id="6_644ap"]
[ext_resource type="PackedScene" uid="uid://rik4l7wr1cam" path="res://levels/player_spawn.tscn" id="6_lc6lk"]
[ext_resource type="PackedScene" uid="uid://cqabb5oeqvtvu" path="res://levels/level_transition.tscn" id="7_lheys"]
[ext_resource type="Texture2D" uid="uid://hnnav6cop6xp" path="res://sprites/tilemaps/tiles_flowers.png" id="7_s5xio"]
[ext_resource type="Script" uid="uid://dr3eyn1ahk8mt" path="res://levels/scenes/safari_leveltransition_indicator.gd" id="8_lc6lk"]
[ext_resource type="Texture2D" uid="uid://cyruob6mjn7sg" path="res://sprites/tilemaps/tiles_crystals.png" id="8_uf5id"]
[ext_resource type="PackedScene" uid="uid://c2r3hkqjfbjjl" path="res://npcs/follower_manager.tscn" id="9_t1xex"]
[ext_resource type="Texture2D" uid="uid://cc8oulj6aantf" path="res://sprites/point.png" id="10_s5xio"]
[ext_resource type="Texture2D" uid="uid://b2rkidjlmi4kw" path="res://sprites/doorway-white.png" id="10_yoihe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fywa5"]
shader = ExtResource("2_lheys")
shader_parameter/snes_transparency = false
shader_parameter/gba_transparency = false
shader_parameter/horizontal_scan_line = false
shader_parameter/vertical_scan_line = false
shader_parameter/enable_palette_cycling = false
shader_parameter/sprite_scroll_direction = Vector2(10, 0)
shader_parameter/sprite_scroll_speed = 0.005
shader_parameter/gba_transparency_scroll_direction = Vector2(0, 0)
shader_parameter/gba_transparency_scroll_speed = 0.01
shader_parameter/gba_transparency_value = 0.5
shader_parameter/horizontal_wave_amplitude = 0.01
shader_parameter/horizontal_wave_frequency = 10.0
shader_parameter/horizontal_wave_speed = 1.0
shader_parameter/vertical_wave_amplitude = 0.0
shader_parameter/vertical_wave_frequency = 0.0
shader_parameter/vertical_wave_speed = 1.0
shader_parameter/horizontal_deform_amplitude = 0.0
shader_parameter/horizontal_deform_frequency = 0.0
shader_parameter/horizontal_deform_speed = 1.0
shader_parameter/vertical_deform_amplitude = 0.0
shader_parameter/vertical_deform_frequency = 0.0
shader_parameter/vertical_deform_speed = 1.0
shader_parameter/width = 0.0
shader_parameter/height = 0.0
shader_parameter/palette_cycling_speed = 0.1

[sub_resource type="CanvasTexture" id="CanvasTexture_ju6r4"]
diffuse_texture = ExtResource("3_t1xex")
texture_repeat = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7x11d"]
texture = ExtResource("5_mfpar")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1seuy"]
tile_layout = 2
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 19
sources/0 = SubResource("TileSetAtlasSource_7x11d")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uf5id"]
texture = ExtResource("7_s5xio")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nqgps"]
texture = ExtResource("8_uf5id")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_nqgps"]
sources/0 = SubResource("TileSetAtlasSource_uf5id")
sources/1 = SubResource("TileSetAtlasSource_nqgps")

[node name="LevelSafari" type="Node2D" groups=["level"]]
y_sort_enabled = true
script = ExtResource("1_644ap")

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="Control" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Background/Control"]
material = SubResource("ShaderMaterial_fywa5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_ju6r4")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CanvasModulate" type="CanvasModulate" parent="Background/Control"]
visible = false
color = Color(0, 0.8586712, 0.8387564, 1)

[node name="TileMapLayer" parent="." instance=ExtResource("4_t1xex")]
visible = false
z_index = -5

[node name="TileMapLayer_Setup" type="TileMapLayer" parent="."]
z_index = -1
z_as_relative = false
tile_map_data = PackedByteArray("AADO/9T/AQAAAAAAAADO/9X/AQAAAAAAAADO/9b/AQAAAAAAAADO/9f/AQAAAAAAAADO/9j/AQAAAAAAAADO/9n/AQAAAAAAAADO/9r/AQAAAAAAAADO/9v/AQAAAAAAAADO/9z/AQAAAAAAAADO/93/AQAAAAAAAADO/97/AQAAAAAAAADO/9//AQAAAAAAAADO/+D/AQAAAAAAAADO/+H/AQAAAAAAAADO/+L/AQAAAAAAAADO/+P/AQAAAAAAAADO/+T/AQAAAAAAAADO/+X/AQAAAAAAAADO/+b/AQAAAAAAAADO/+f/AQAAAAAAAADO/+j/AQAAAAAAAADO/+n/AQAAAAAAAADO/+r/AQAAAAAAAADO/+v/AQAAAAAAAADO/+z/AQAAAAAAAADO/+3/AQAAAAAAAADO/+7/AQAAAAAAAADO/+//AQAAAAAAAADO//D/AQAAAAAAAADO//H/AQAAAAAAAADO//L/AQAAAAAAAADO//P/AQAAAAAAAADO//T/AQAAAAAAAADO//X/AQAAAAAAAADO//b/AQAAAAAAAADO//f/AQAAAAAAAADO//j/AQAAAAAAAADO//n/AQAAAAAAAADO//r/AQAAAAAAAADO//v/AQAAAAAAAADO//z/AQAAAAAAAADO//3/AQAAAAAAAADO//7/AQAAAAAAAADO////AQAAAAAAAADO/wAAAQAAAAAAAADO/wEAAQAAAAAAAADO/wIAAQAAAAAAAADO/wMAAQAAAAAAAADO/wQAAQAAAAAAAADO/wUAAQAAAAAAAADO/wYAAQAAAAAAAADO/wcAAQAAAAAAAADO/wgAAQAAAAAAAADO/wkAAQAAAAAAAADO/woAAQAAAAAAAADO/wsAAQAAAAAAAADO/wwAAQAAAAAAAADO/w0AAQAAAAAAAADO/w4AAQAAAAAAAADO/w8AAQAAAAAAAADO/xAAAQAAAAAAAADO/xEAAQAAAAAAAADO/xIAAQAAAAAAAADO/xMAAQAAAAAAAADO/xQAAQAAAAAAAADO/xUAAQAAAAAAAADO/xYAAQAAAAAAAADO/xcAAQAAAAAAAADO/xgAAQAAAAAAAADO/xkAAQAAAAAAAADO/xoAAQAAAAAAAADO/xsAAQAAAAAAAADO/xwAAQAAAAAAAADO/x0AAQAAAAAAAADO/x4AAQAAAAAAAADO/x8AAQAAAAAAAADO/yAAAQAAAAAAAADO/yEAAQAAAAAAAADO/yIAAQAAAAAAAADO/yMAAQAAAAAAAADO/yQAAQAAAAAAAADO/yUAAQAAAAAAAADO/yYAAQAAAAAAAADO/ycAAQAAAAAAAADO/ygAAQAAAAAAAADO/ykAAQAAAAAAAADO/yoAAQAAAAAAAADO/ysAAQAAAAAAAADO/87/AQAAAAAAAADO/8//AQAAAAAAAADO/9D/AQAAAAAAAADO/9H/AQAAAAAAAADO/9L/AQAAAAAAAADO/9P/AQAAAAAAAADP/87/AQAAAAAAAADQ/87/AQAAAAAAAADR/87/AQAAAAAAAADS/87/AQAAAAAAAADT/87/AQAAAAAAAADU/87/AQAAAAAAAADV/87/AQAAAAAAAADW/87/AQAAAAAAAADX/87/AQAAAAAAAADY/87/AQAAAAAAAADZ/87/AQAAAAAAAADa/87/AQAAAAAAAADb/87/AQAAAAAAAADc/87/AQAAAAAAAADd/87/AQAAAAAAAADe/87/AQAAAAAAAADf/87/AQAAAAAAAADg/87/AQAAAAAAAADh/87/AQAAAAAAAADi/87/AQAAAAAAAADj/87/AQAAAAAAAADk/87/AQAAAAAAAADl/87/AQAAAAAAAADm/87/AQAAAAAAAADn/87/AQAAAAAAAADo/87/AQAAAAAAAADp/87/AQAAAAAAAADq/87/AQAAAAAAAADr/87/AQAAAAAAAADs/87/AQAAAAAAAADt/87/AQAAAAAAAADu/87/AQAAAAAAAADv/87/AQAAAAAAAADw/87/AQAAAAAAAADx/87/AQAAAAAAAADy/87/AQAAAAAAAADz/87/AQAAAAAAAAD0/87/AQAAAAAAAAD1/87/AQAAAAAAAAD2/87/AQAAAAAAAAD3/87/AQAAAAAAAAD4/87/AQAAAAAAAAD5/87/AQAAAAAAAAD6/87/AQAAAAAAAAD7/87/AQAAAAAAAAD8/87/AQAAAAAAAAD9/87/AQAAAAAAAAD+/87/AQAAAAAAAAD//87/AQAAAAAAAAAAAM7/AQAAAAAAAAABAM7/AQAAAAAAAAACAM7/AQAAAAAAAAADAM7/AQAAAAAAAAAEAM7/AQAAAAAAAAAFAM7/AQAAAAAAAAAGAM7/AQAAAAAAAAAHAM7/AQAAAAAAAAAIAM7/AQAAAAAAAAAJAM7/AQAAAAAAAAAKAM7/AQAAAAAAAAALAM7/AQAAAAAAAAAMAM7/AQAAAAAAAAANAM7/AQAAAAAAAAAOAM7/AQAAAAAAAAAPAM7/AQAAAAAAAAAQAM7/AQAAAAAAAAARAM7/AQAAAAAAAAASAM7/AQAAAAAAAAATAM7/AQAAAAAAAAAUAM7/AQAAAAAAAAAVAM7/AQAAAAAAAAAWAM7/AQAAAAAAAAAXAM7/AQAAAAAAAAAYAM7/AQAAAAAAAAAZAM7/AQAAAAAAAAAaAM7/AQAAAAAAAAAbAM7/AQAAAAAAAAAcAM7/AQAAAAAAAAAdAM7/AQAAAAAAAAAeAM7/AQAAAAAAAAAfAM7/AQAAAAAAAAAgAM7/AQAAAAAAAAAhAM7/AQAAAAAAAAAiAM7/AQAAAAAAAAAjAM7/AQAAAAAAAAAkAM7/AQAAAAAAAAAlAM7/AQAAAAAAAAAmAM7/AQAAAAAAAAAnAM7/AQAAAAAAAAAoAM7/AQAAAAAAAAApAM7/AQAAAAAAAAAqAM7/AQAAAAAAAAArAM7/AQAAAAAAAAAsAM7/AQAAAAAAAAAtAM7/AQAAAAAAAAAuAM7/AQAAAAAAAADO/ywAAQAAAAAAAADO/y0AAQAAAAAAAADO/y4AAQAAAAAAAADO/y8AAQAAAAAAAADO/zAAAQAAAAAAAADO/zEAAQAAAAAAAADP/zEAAQAAAAAAAADQ/zEAAQAAAAAAAADR/zEAAQAAAAAAAADS/zEAAQAAAAAAAADT/zEAAQAAAAAAAADU/zEAAQAAAAAAAADV/zEAAQAAAAAAAADW/zEAAQAAAAAAAADX/zEAAQAAAAAAAADY/zEAAQAAAAAAAADZ/zEAAQAAAAAAAADa/zEAAQAAAAAAAADb/zEAAQAAAAAAAADc/zEAAQAAAAAAAADd/zEAAQAAAAAAAADe/zEAAQAAAAAAAADf/zEAAQAAAAAAAADg/zEAAQAAAAAAAADh/zEAAQAAAAAAAADi/zEAAQAAAAAAAADj/zEAAQAAAAAAAADk/zEAAQAAAAAAAADl/zEAAQAAAAAAAADm/zEAAQAAAAAAAADn/zEAAQAAAAAAAADo/zEAAQAAAAAAAADp/zEAAQAAAAAAAADq/zEAAQAAAAAAAADr/zEAAQAAAAAAAADs/zEAAQAAAAAAAADt/zEAAQAAAAAAAADu/zEAAQAAAAAAAADv/zEAAQAAAAAAAADw/zEAAQAAAAAAAADx/zEAAQAAAAAAAADy/zEAAQAAAAAAAADz/zEAAQAAAAAAAAD0/zEAAQAAAAAAAAD1/zEAAQAAAAAAAAD2/zEAAQAAAAAAAAD3/zEAAQAAAAAAAAD4/zEAAQAAAAAAAAD5/zEAAQAAAAAAAAD6/zEAAQAAAAAAAAD7/zEAAQAAAAAAAAD8/zEAAQAAAAAAAAD9/zEAAQAAAAAAAAD+/zEAAQAAAAAAAAD//zEAAQAAAAAAAAAAADEAAQAAAAAAAAABADEAAQAAAAAAAAACADEAAQAAAAAAAAADADEAAQAAAAAAAAAEADEAAQAAAAAAAAAFADEAAQAAAAAAAAAGADEAAQAAAAAAAAAHADEAAQAAAAAAAAAIADEAAQAAAAAAAAAJADEAAQAAAAAAAAAKADEAAQAAAAAAAAALADEAAQAAAAAAAAAMADEAAQAAAAAAAAANADEAAQAAAAAAAAAOADEAAQAAAAAAAAAPADEAAQAAAAAAAAAQADEAAQAAAAAAAAARADEAAQAAAAAAAAASADEAAQAAAAAAAAATADEAAQAAAAAAAAAUADEAAQAAAAAAAAAVADEAAQAAAAAAAAAWADEAAQAAAAAAAAAXADEAAQAAAAAAAAAYADEAAQAAAAAAAAAZADEAAQAAAAAAAAAaADEAAQAAAAAAAAAbADEAAQAAAAAAAAAcADEAAQAAAAAAAAAdADEAAQAAAAAAAAAeADEAAQAAAAAAAAAfADEAAQAAAAAAAAAgADEAAQAAAAAAAAAhADEAAQAAAAAAAAAiADEAAQAAAAAAAAAjADEAAQAAAAAAAAAkADEAAQAAAAAAAAAlADEAAQAAAAAAAAAmADEAAQAAAAAAAAAnADEAAQAAAAAAAAAoADEAAQAAAAAAAAApADEAAQAAAAAAAAAqADEAAQAAAAAAAAArADEAAQAAAAAAAAAsADEAAQAAAAAAAAAtADEAAQAAAAAAAAAuADEAAQAAAAAAAAAvAM7/AQAAAAAAAAAvADEAAQAAAAAAAAAwAM7/AQAAAAAAAAAwADEAAQAAAAAAAAAxAM7/AQAAAAAAAAAxADEAAQAAAAAAAAAxAM//AQAAAAAAAAAxAND/AQAAAAAAAAAxANH/AQAAAAAAAAAxANL/AQAAAAAAAAAxANP/AQAAAAAAAAAxANT/AQAAAAAAAAAxANX/AQAAAAAAAAAxANb/AQAAAAAAAAAxANf/AQAAAAAAAAAxANj/AQAAAAAAAAAxANn/AQAAAAAAAAAxANr/AQAAAAAAAAAxANv/AQAAAAAAAAAxANz/AQAAAAAAAAAxAN3/AQAAAAAAAAAxAN7/AQAAAAAAAAAxAN//AQAAAAAAAAAxAOD/AQAAAAAAAAAxAOH/AQAAAAAAAAAxAOL/AQAAAAAAAAAxAOP/AQAAAAAAAAAxAOT/AQAAAAAAAAAxAOX/AQAAAAAAAAAxAOb/AQAAAAAAAAAxAOf/AQAAAAAAAAAxAOj/AQAAAAAAAAAxAOn/AQAAAAAAAAAxAOr/AQAAAAAAAAAxAOv/AQAAAAAAAAAxAOz/AQAAAAAAAAAxAO3/AQAAAAAAAAAxAO7/AQAAAAAAAAAxAO//AQAAAAAAAAAxAPD/AQAAAAAAAAAxAPH/AQAAAAAAAAAxAPL/AQAAAAAAAAAxAPP/AQAAAAAAAAAxAPT/AQAAAAAAAAAxAPX/AQAAAAAAAAAxAPb/AQAAAAAAAAAxAPf/AQAAAAAAAAAxAPj/AQAAAAAAAAAxAPn/AQAAAAAAAAAxAPr/AQAAAAAAAAAxAPv/AQAAAAAAAAAxAPz/AQAAAAAAAAAxAP3/AQAAAAAAAAAxAP7/AQAAAAAAAAAxAP//AQAAAAAAAAAxAAAAAQAAAAAAAAAxAAEAAQAAAAAAAAAxAAIAAQAAAAAAAAAxAAMAAQAAAAAAAAAxAAQAAQAAAAAAAAAxAAUAAQAAAAAAAAAxAAYAAQAAAAAAAAAxAAcAAQAAAAAAAAAxAAgAAQAAAAAAAAAxAAkAAQAAAAAAAAAxAAoAAQAAAAAAAAAxAAsAAQAAAAAAAAAxAAwAAQAAAAAAAAAxAA0AAQAAAAAAAAAxAA4AAQAAAAAAAAAxAA8AAQAAAAAAAAAxABAAAQAAAAAAAAAxABEAAQAAAAAAAAAxABIAAQAAAAAAAAAxABMAAQAAAAAAAAAxABQAAQAAAAAAAAAxABUAAQAAAAAAAAAxABYAAQAAAAAAAAAxABcAAQAAAAAAAAAxABgAAQAAAAAAAAAxABkAAQAAAAAAAAAxABoAAQAAAAAAAAAxABsAAQAAAAAAAAAxABwAAQAAAAAAAAAxAB0AAQAAAAAAAAAxAB4AAQAAAAAAAAAxAB8AAQAAAAAAAAAxACAAAQAAAAAAAAAxACEAAQAAAAAAAAAxACIAAQAAAAAAAAAxACMAAQAAAAAAAAAxACQAAQAAAAAAAAAxACUAAQAAAAAAAAAxACYAAQAAAAAAAAAxACcAAQAAAAAAAAAxACgAAQAAAAAAAAAxACkAAQAAAAAAAAAxACoAAQAAAAAAAAAxACsAAQAAAAAAAAAxACwAAQAAAAAAAAAxAC0AAQAAAAAAAAAxAC4AAQAAAAAAAAAxAC8AAQAAAAAAAAAxADAAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_1seuy")
script = ExtResource("6_644ap")

[node name="TileMapLayer_Decor" type="TileMapLayer" parent="."]
z_index = -4
tile_set = SubResource("TileSet_nqgps")

[node name="LevelTransition_LevelOutside" parent="." instance=ExtResource("7_lheys")]
position = Vector2(255, 33)
level = "uid://73t0phvgd73o"
target_transition_area = "LevelTransition_LevelSafari"
size = 1
side = 2
show_pointer = false

[node name="SpriteDoor" type="Sprite2D" parent="LevelTransition_LevelOutside"]
texture = ExtResource("10_yoihe")
offset = Vector2(0, -12)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="LevelTransition_LevelOutside"]
position = Vector2(0, -8)
script = ExtResource("8_lc6lk")

[node name="LevelTransitionIndicator" type="Sprite2D" parent="LevelTransition_LevelOutside/VisibleOnScreenNotifier2D"]
z_index = 1
scale = Vector2(-1, 1)
texture = ExtResource("10_s5xio")

[node name="PlayerSpawn" parent="." instance=ExtResource("6_lc6lk")]
position = Vector2(165, 32)

[node name="----------------- LEVEL SETUP -----------------" type="Node" parent="."]

[node name="FollowerManager" parent="." instance=ExtResource("9_t1xex")]

[connection signal="screen_entered" from="LevelTransition_LevelOutside/VisibleOnScreenNotifier2D" to="LevelTransition_LevelOutside/VisibleOnScreenNotifier2D" method="_on_screen_entered"]
[connection signal="screen_exited" from="LevelTransition_LevelOutside/VisibleOnScreenNotifier2D" to="LevelTransition_LevelOutside/VisibleOnScreenNotifier2D" method="_on_screen_exited"]
